Reduced image sizes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ This blog was created with the following goals in mind:
 This blog was created with the following goals in mind:
   To explore and learn more about software development in general, programming languages (Java&JavaScript) and frameworks (Spring&AngularReact)  To improve as a software developer To discuss ideas on software development To document my learning and share it with the world :)  
 Thanks for stopping by, you can read more about me in the About page, or you can take a look at my blog posts in the Posts page.">
-<meta property="og:image" content="https://devflection.com/profile_mid.jpg" />
+<meta property="og:image" content="https://devflection.com/profile_small.jpg" />
 <meta property="og:url" content="https://devflection.com/" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Devflection" />
@@ -55,12 +55,12 @@ Thanks for stopping by, you can read more about me in the About page, or you can
   <meta name="twitter:description" content="Welcome to Devflection! 
 This blog was created with the following goals in mind:
   To explore and learn more about software development in general, programming languages (Java&JavaScript) and …">
-  <meta name="twitter:image" content="https://devflection.com/profile_mid.jpg" />
+  <meta name="twitter:image" content="https://devflection.com/profile_small.jpg" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Devflection" />
   <meta name="twitter:creator" content="@Devflection" />
-  <meta property="og:image" content="https://devflection.com/profile_mid.jpg" />
-  <meta name="twitter:image" content="https://devflection.com/profile_mid.jpg" />
+  <meta property="og:image" content="https://devflection.com/profile_small.jpg" />
+  <meta name="twitter:image" content="https://devflection.com/profile_small.jpg" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Devflection" />
   <meta name="twitter:creator" content="@Devflection" />
@@ -124,7 +124,7 @@ This blog was created with the following goals in mind:
       <div class="avatar-container">
         <div class="avatar-img-border">
           <a title="Devflection" href="https://devflection.com/">
-            <img class="avatar-img" src="https://devflection.com/profile_mid.jpg" alt="Devflection" />
+            <img class="avatar-img" src="https://devflection.com/profile_small.jpg" alt="Devflection" />
           </a>
         </div>
       </div>
