--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ or you can take a look at my blog posts in the <a href="/posts/">Posts</a> page.
                 </a>
               </li>
               <li>
-                <a href="https://linkedin.com/in/MatijaHericko" title="LinkedIn">
+                <a href="https://linkedin.com/in/matija-hericko" title="LinkedIn">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
